# api/controllers/webteach_service.js
@@ -3,7 +3,7 @@
 var WebTeach = require('../domain/webteach'),
     Logger = require('bunyan');
 const uuidv4 = require('uuid/v4');
-var nJwt = require('njwt');
+
 
 var log = new Logger.createLogger({
     name: 'webteach-service',
@@ -12,7 +12,9 @@ var log = new Logger.createLogger({
 
 module.exports = {
     userLogin: userLogin,
-    userSignup: userSignup
+    userSignup: userSignup,
+    getAllBlogs: getAllBlogs,
+    getUserBlogs: getUserBlogs
 };
 
 
@@ -25,11 +27,7 @@ function userLogin(req, res) {
                 log.error("TraceId : %s, Error : %s", JSON.stringify(err));
             } else if (content) {
                 res.set('Content-Type', 'application/json');
-                generateToken(function(token) {
-                    var data = {};
-                    data.token = token;
-                    res.json(data);
-                })
+                res.json(content);
             }
         });
 }
@@ -44,38 +42,36 @@ function userSignup(req, res) {
                 log.error("TraceId : %s, Error : %s", JSON.stringify(err));
             } else if (content) {
                 res.set('Content-Type', 'application/json');
-                generateToken(function(token) {
-                    var data = {};
-                    data.token = token;
-                    res.json(data);
-                })
+                res.json(content);
             }
         });
 }
 
-
-function generateToken(cb) {
-    var secretKey = process.env.TOKEN_KEY;
-    var claims = {
-        sub: 'user9876',
-        iss: 'https://mytrustyapp.com',
-        permissions: 'upload-photos'
-    }
-    var jwt = nJwt.create(claims, secretKey);
-    var token = jwt.compact();
-    console.log(token);
-    cb(token);
+function getAllBlogs(req, res) {
+    (new WebTeach()).getAllBlogs(
+        function(err, content) {
+            if (err) {
+                res.writeHead(err.statusCode, { 'Content-Type': 'application/json' });
+                res.end(JSON.stringify(err));
+                log.error("TraceId : %s, Error : %s", JSON.stringify(err));
+            } else if (content) {
+                res.set('Content-Type', 'application/json');
+                res.json(content);
+            }
+        });
 }
 
-function verifyToken(token, cb) {
-    var secretKey = process.env.TOKEN_KEY;
-    nJwt.verify(token, secretKey, function(err, verifiedJwt) {
-        if (err) {
-            console.log(err); // Token has expired, has been tampered with, etc
-            cb(false);
-        } else {
-            console.log(verifiedJwt); // Will contain the header and body
-            cb(true);
-        }
-    });
+function getUserBlogs(req, res) {
+    var username = req.swagger.params.username.value;
+    (new WebTeach()).getUserBlogs(username,
+        function(err, content) {
+            if (err) {
+                res.writeHead(err.statusCode, { 'Content-Type': 'application/json' });
+                res.end(JSON.stringify(err));
+                log.error("TraceId : %s, Error : %s", JSON.stringify(err));
+            } else if (content) {
+                res.set('Content-Type', 'application/json');
+                res.json(content);
+            }
+        });
 }
